<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/maxima_main_menu_about"
        android:titleCondensed="About MoA"
        android:title="@string/menu_about"/>
    <item
        android:id="@+id/maxima_main_menu_man"
        android:titleCondensed="Man"
        android:title="@string/menu_manual"/>
    <item
        android:id="@+id/maxima_main_menu_graph"
        android:titleCondensed="Graph"
        android:title="@string/menu_graph"/>
    <item
        android:id="@+id/maxima_main_menu_quit"
        android:titleCondensed="Quit"
        android:title="@string/menu_quit"/>

    <item
        android:id="@+id/maxima_main_menu_preference"
        android:titleCondensed="Preferences"
        android:title="@string/menu_preference"/>

    <item android:id="@+id/session" android:title="@string/menu_session">
        <menu>
            <item android:id="@+id/maxima_main_menu_save" android:title="@string/menu_session_save"/>
            <item android:id="@+id/maxima_main_menu_restore" android:title="@string/menu_session_restore"/>
            <item android:id="@+id/maxima_main_menu_playback" android:title="@string/menu_session_playback"/>
        </menu>
    </item>
    <item
        android:id="@+id/maxima_main_menu_nextexample"
        android:title="@string/menu_next_sample"/>

    <item
        android:id="@+id/maxima_main_menu_loadscript"
        android:titleCondensed="Load script file"
        android:title="@string/menu_load_script"/>


</menu>
