<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/input_auto_completion_pref"
        android:summary="Yes"
        android:title="Use auto completion"
        android:visibility="visible" />
    <ListPreference
        android:defaultValue="file:///android_asset/maxima-doc/en/maxima.html"
        android:entries="@array/manualLanguages"
        android:entryValues="@array/manualLanguageValues"
        android:key="@string/maxima_manual_language_pref"
        android:summary="%s"
        android:title="Language for Maxima Manual" />
    <ListPreference
        android:defaultValue="20"
        android:entries="@array/fontSize"
        android:entryValues="@array/fontSize"
        android:key="@string/input_area_font_size_pref"
        android:summary="%s"
        android:title="Command input text size" />
    <ListPreference
        android:defaultValue="20"
        android:entries="@array/fontSize"
        android:entryValues="@array/fontSize"
        android:key="@string/browser_font_size_pref"
        android:summary="%s"
        android:title="Result formula font size" />
</PreferenceScreen>